--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2 class="nav__litle">Curso CSS.</h2>
+                <h2 class="nav__litle">MASTER EN CSS.</h2>
             </div>
 
             <ul class="nav__link nav__link--menu">
